# mle-training

./: .gitignore  Dockerfile  Housing.ipynb  README.md  env.yml  nonstandardcode.py  setup.cfg  setup.py
deploy/conda/: linux_cpu_py39.yml
docs/source/: conf.py  index.rst  modules.rst
notebooks/reference/: Housing.ipynb
src/: ingest_data.py  score.py  train.py
src/house_price/: ingest_data.py  logger.py  score.py  train.py
tests/functional_tests/: functional_test.py
tests/unit_tests/: ingest_data_test.py  score_test.py  train_test.py
