[metadata]
name = house_price
version = 0.3
author = Pragathieshwaran
author_email = pragath.thirumur@tigeranalytics.com
description = Package for assignment 4.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pragathiesh/mle-training
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[flake8]
ignore = ["E501"]
