[metadata]
name = house_price
version = 0.3
author = Pragathieshwaran
author_email = pragath.thirumur@tigeranalytics.com
description = A package for house price prediction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pragathiesh/mle-training
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
ignore = ["E501"]
